apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
