apps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  labels:
    name: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - paperless.internal.vkolobara.com
      secretName: paperlessngx-cert
  rules:
    - host: paperless.internal.vkolobara.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
